--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">KOALA_ANDROID</string>
+
+    <string name="back_button_content_description">Back</string>
+    <string name="koala_logo_content_description">Back</string>
 </resources>
