--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,13 @@
     <string name="signup_terms_koala">Koala 이용약관 (필수)</string>
     <string name="signup_terms_privacy_detail">.</string>
     <string name="signup_terms_koala_detail">\"제1조(목적)\n한강 서비스 이용약관은 bcsd lab에서 서비스를 제공함에 있어, 이용자간의 관리, 의무 및 책임 사항 등을 목적으로 합니다\n\n커뮤니티 이용규칙\n한강 서비스 이용약관은 bcsd lab에서 서비스를 제공함에 있어, 이용자간의 관리, 의무 및 책임 사항 등을 목적으로 합니다\"</string>
+    <string name="signup_subtitle_permission">권한 허용</string>
+    <string name="signup_subtitle_permission_description">원활한 서비스 사용을 위하여 권한 허용이 필요합니다.</string>
+    <string name="signup_permission_item_notification">알림 (필수)</string>
+    <string name="signup_permission_item_notification_description">키워드 알림 시 필수 이용</string>
+    <string name="signup_permission_item_camera">카메라 (선택)</string>
+    <string name="signup_permission_item_camera_description">채팅방 이미지 전송 시 이용</string>
+    <string name="signup_permission_item_storage">저장공간 (선택)</string>
+    <string name="signup_permission_item_notification_storage">채팅방 이미지 저장/업로드</string>
+    <string name="signup_permission_info"><![CDATA[필수 권한을 허용하지 않는 경우,  정상적인 서비스 사용이 어려울 수 있습니다.\n선택 권한을 허용하지 않아도 해당 기능 외 서비스는 정상적으로 사용가능합니다.\n‘설정 > 애플리케이션 > koala > 권한’에서 재설정이 가능합니다.]]></string>
 </resources>
