Add sign up user input screen composable

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,4 +35,21 @@
     <string name="signup_permission_info"><![CDATA[필수 권한을 허용하지 않는 경우,  정상적인 서비스 사용이 어려울 수 있습니다.\n선택 권한을 허용하지 않아도 해당 기능 외 서비스는 정상적으로 사용가능합니다.\n‘설정 > 애플리케이션 > koala > 권한’에서 재설정이 가능합니다.]]></string>
     <string name="signup_next">다음</string>
     <string name="signup_finish">완료</string>
+    <string name="signup_subtitle_user_info">회원정보 입력</string>
+    <string name="signup_subtitle_user_info_description">사용할 회원 정보를 입력해주세요.</string>
+    <string name="signup_input_error_id_duplicated">이미 가입된 아이디입니다.</string>
+    <string name="signup_input_hint_id">아이디</string>
+    <string name="signup_password_error_length_lower_8">비밀번호는 8자 이상이어야 합니다.</string>
+    <string name="signup_password_error_length_upper_15">비밀번호는 15자 이하여야 합니다.</string>
+    <string name="english">영어</string>
+    <string name="number">숫자</string>
+    <string name="signup_password_error_not_contains">%1$s가 포함되어 있지 않습니다.</string>
+    <string name="signup_input_hint_password">비밀번호 (영문, 숫자, 특수기호 포함 8자~15자)</string>
+    <string name="signup_input_hint_nickname">닉네임</string>
+    <string name="signup_input_hint_email">이메일</string>
+    <string name="signup_input_hint_password_2">비밀번호 확인</string>
+    <string name="signup_input_error_password_not_match">비밀번호가 일치하지 않습니다.</string>
+    <string name="signup_input_error_email_format_not_match">이메일 형식이 알맞지 않습니다.</string>
+    <string name="signup_input_error_nickname_duplicated">이미 사용중인 닉네임입니다.</string>
+    <string name="special">특수문자</string>
 </resources>
