--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -60,4 +60,5 @@
     <string name="signup_input_error_email_no_input">이메일을 입력해주세요.</string>
     <string name="signup_input_error_email_duplicated">중복된 이메일입니다.</string>
     <string name="signup_input_error_nickname_no_input">닉네임을 입력해주세요.</string>
+    <string name="signup_password_error_not_support_character">사용할 수 없는 문자가 있습니다.</string>
 </resources>
