--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -81,4 +81,7 @@
     <string name="chatroom">채팅방</string>
     <string name="setting">설정</string>
     <string name="sign_up_input_loading_message">잠시만 기다려 주세요.</string>
+    <string name="modify">수정</string>
+    <string name="keyword_detail_tab_item_all">전체</string>
+    <string name="keyword_detail_search_hint">알림 대상 / 알림 내용 / 키워드 입력</string>
 </resources>
