--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -84,4 +84,7 @@
     <string name="modify">수정</string>
     <string name="keyword_detail_tab_item_all">전체</string>
     <string name="keyword_detail_search_hint">알림 대상 / 알림 내용 / 키워드 입력</string>
+    <string name="keyword_detail_select_all">전체선택</string>
+    <string name="keyword_detail_item_inbox">보관</string>
+    <string name="keyword_detail_item_delete">삭제</string>
 </resources>
