--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -82,9 +82,16 @@
     <string name="setting">설정</string>
     <string name="sign_up_input_loading_message">잠시만 기다려 주세요.</string>
     <string name="modify">수정</string>
-    <string name="keyword_detail_tab_item_all">전체</string>
+    <string name="keyword_site_all">전체</string>
     <string name="keyword_detail_search_hint">알림 대상 / 알림 내용 / 키워드 입력</string>
     <string name="keyword_detail_select_all">전체선택</string>
     <string name="keyword_detail_item_inbox">보관</string>
     <string name="keyword_detail_item_delete">삭제</string>
+    <string name="keyword_site_dorm">아우미르</string>
+    <string name="keyword_site_facebook">페이스북</string>
+    <string name="keyword_site_instagram">인스타그램</string>
+    <string name="keyword_site_portal">아우누리</string>
+    <string name="keyword_site_youtube">유튜브</string>
+    <string name="keyword_detail_menu_read_item">읽은 알림</string>
+    <string name="keyword_detail_menu_not_read_item">읽지 않은 알림</string>
 </resources>
