--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -74,7 +74,8 @@
     <string name="signup_input_error_email_duplicated">중복된 이메일입니다.</string>
     <string name="signup_input_error_nickname_no_input">닉네임을 입력해주세요.</string>
     <string name="signup_password_error_not_support_character">사용할 수 없는 문자가 있습니다.</string>
-    <string name="google_login_fail">구글 로그인 실패</string>
+    <string name="google_login_fail">구글 로그인에 실패하였습니다.</string>
+    <string name="device_token_error">디바이스 토큰을 가져오는데 실패하였습니다.</string>
 
     <!--main -->
     <string name="keyword">키워드</string>
