--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -74,7 +74,6 @@
     <string name="signup_input_error_email_duplicated">중복된 이메일입니다.</string>
     <string name="signup_input_error_nickname_no_input">닉네임을 입력해주세요.</string>
     <string name="signup_password_error_not_support_character">사용할 수 없는 문자가 있습니다.</string>
-    <string name="device_token_error">디바이스 토큰을 가져오는데 실패하였습니다.</string>
     <string name="tutorial_keyword_content">키워드와 알림을 받을 대상을 선택하여\n 원하는 알림을 받아 보세요!</string>
     <string name="tutorial_history_content">놓친 알림은 히스토리에서 확인하고\n 중요 알림을 설정해 보세요!</string>
     <string name="tutorial_storage_content">중요한 알림은 보관함에서 확인하고\n 메모를 추가할 수도 있어요!</string>
@@ -88,6 +87,8 @@
     <string name="tutorial_second_chatting_name">ddsndms</string>
     <string name="tutorial_second_chatting_time">18:31</string>
     <string name="tutorial_second_chatting_context">반갑습니다ㅋ 공지 확인 하셨죠?</string>
+    <string name="google_login_fail">구글 로그인에 실패하였습니다.</string>
+    <string name="device_token_error">디바이스 토큰을 가져오는데 실패하였습니다.</string>
 
     <!--main -->
     <string name="keyword">키워드</string>
