--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -109,9 +109,12 @@
     <string name="keyword_until_check_button_alarm">확인버튼누를 때 까지 알림</string>
     <string name="search_for_notifications">알림받을 대상 검색</string>
     <string name="search_for_notifications_input">알림받을 대상 입력</string>
-    <string name="error_search_for_notifications">알림받을 대상을 반드시 선택해 주세요.</string>
+    <string name="error_search_for_alarm">알림받을 대상을 반드시 선택해 주세요.</string>
+    <string name="error_search_for_keyword">이미 등록된 키워드입니다.</string>
     <string name="keyword_close">닫기</string>
     <string name="keyword_search_fail">검색 결과가 없습니다.</string>
+    <string name="keyword_search_empty">키워드를 입력해주세요.</string>
+    <string name="site_search_empty">알림받을 사이트를 입력해주세요.</string>
 
     <!-- keyword -->
     <string name="add_keyword">키워드 추가하기</string>
